--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="qh9s4OMKyNdKD3SJGr2ZYO776TZj7bAqkFtRrRAkBC8" />
     <!-- Start of  Zendesk Widget script -->
 <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7668c976-0fb7-47ee-8740-3e9115bdb10f"> </script>
 <!-- End of  Zendesk Widget script -->
@@ -10,7 +11,8 @@
 <title>Pogo Sign In Account | How To Sign In Pogo?</title>
 <meta name="description" content="Quickly sign in to your Pogo sign in account with our easy guide. Learn how to sign in to Pogo and enjoy seamless access to your favorite games today" />
 <meta name="keywords" content="pogo sign in, pogo sign in account, pogo account, pogo account sign in, sign in pogo, pogo sign in my account, sign in my pogo account, how to sign in pogo" />
-<style>
+<link rel="canonical" href="https://pogoaccount.pages.dev/">
+    <style>
   /* Reset and base styles */
   * {
     margin: 0; padding: 0; box-sizing: border-box;
@@ -222,7 +224,7 @@
       Pogo provides a seamless sign-in process designed to be user-friendly and secure. By using your registered email and password, you gain instant access to your game library, personal stats, and the latest updates from the Pogo community.
     </p>
     <p>
-      It’s important to keep your Pogo Sign In Account credentials safe and to use a strong password. Additionally, Pogo supports multi-factor authentication to add an extra layer of security for your account.
+      It’s important to keep your <a href="https://pogo-club.net">Pogo Sign In Account</a> credentials safe and to use a strong password. Additionally, Pogo supports multi-factor authentication to add an extra layer of security for your account.
     </p>
 
     <h3>How to Sign In to Your Pogo Account</h3>
@@ -270,7 +272,7 @@
 
     <h3>Security Tips for Your Pogo Sign In Account</h3>
     <p>
-      Security is paramount when managing your Pogo Sign In Account. Here are some key tips:
+      Security is paramount when managing your <a href="https://pogo-play.net">Pogo Sign In Account</a>. Here are some key tips:
     </p>
     <ul>
       <li>Use a strong, unique password combining letters, numbers, and symbols.</li>
@@ -320,7 +322,7 @@
 
     <h3>Conclusion</h3>
     <p>
-      The Pogo Sign In Account is central to enjoying everything Pogo has to offer. With secure login, easy account management, and helpful support, your Pogo experience will be smooth and fun. Remember to keep your account information safe and reach out for support when needed.
+      The <a href="https://pogogames.inblog.io/pogo-sign-in-account">Pogo Sign In Account</a> is central to enjoying everything Pogo has to offer. With secure login, easy account management, and helpful support, your Pogo experience will be smooth and fun. Remember to keep your account information safe and reach out for support when needed.
     </p>
     <p>
       Whether you’re playing casual games or competing in tournaments, your Pogo account connects you with a lively community of players worldwide. Sign in today and dive into endless fun!
