--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
     <h3>Conclusion</h3>
     <p>
-      The <a href="https://pogogames.inblog.io/pogo-sign-in-account">Pogo Sign In Account</a> is central to enjoying everything Pogo has to offer. With secure login, easy account management, and helpful support, your Pogo experience will be smooth and fun. Remember to keep your account information safe and reach out for support when needed.
+      The <a href="https://sites.google.com/view/pogogamesguide/articles/pogo-sign-in-account">Pogo Sign In Account</a> is central to enjoying everything Pogo has to offer. With secure login, easy account management, and helpful support, your Pogo experience will be smooth and fun. Remember to keep your account information safe and reach out for support when needed.
     </p>
     <p>
       Whether you’re playing casual games or competing in tournaments, your Pogo account connects you with a lively community of players worldwide. Sign in today and dive into endless fun!
